# HexE

./: .gitignore  Cargo.toml  README.md  program.asm
.cargo/: config.toml
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs  tempCodeRunnerFile.rs
src/Assembler/: lexer.rs  mod.rs  opcode.rs
src/assembler/: lexer.rs  mod.rs  opcode.rs  parser.rs  pass1asm.rs  pass2asm.rs  registers.rs
src/disassembler/: disassembler.rs  mod.rs
src/loader/: loader.rs  mod.rs
src/predefined/: common.rs  directive.rs  mod.rs  opcode.rs  registers.rs
src/simulator/: inistialize_machine.rs  mod.rs  opcode_implementation.rs  sim.rs
src/tui/: disassembly.rs  list.rs  memory.rs  mod.rs  register.rs  registers.rs  table.rs  tabs.rs  tui.rs
test/: prog1.asm  prog10.asm  prog2.asm  prog7.asm  prog9.asm
test_files/: prog11.asm  prog3.asm  prog4.asm  prog5.asm  prog6.asm  prog8.asm
test_files/obj_prog/: obj_prog1.txt  obj_prog2.txt
test_files/test/: test.rs
tests/: disassembler_test.rs  loader_test.rs  pass2asm_test.rs  simulator_test.rs  test.rs
