[package]
name = "hex_e"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.19"
hex = "0.4.3"
ratatui = "0.29.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
clap = { version = "4.5", features = ["derive"] }
fakeit = "1"
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }
unicode-width = ">=0.2.0, <=0.2.1"

